# sst

./: bun.lockb  go.mod  go.sum  install
.devcontainer/: devcontainer.json
.github/workflows/: binary.yml
cmd/appsync/: main.go
cmd/colortest/: main.go
cmd/darktile/: main.go
cmd/libvterm/: main.go
cmd/sst/: cert.go  deploy.go  diagnostic.go  diff.go  init.go  main.go  mosaic.go  refresh.go  remove.go  secret.go  shell.go  state.go  tunnel.go  ui.go  upgrade.go  version.go
examples/aws-apig-websocket/: package.json  sst-env.d.ts
examples/aws-astro/: bun.lockb
examples/aws-astro-container/: astro.config.mjs  package.json  sst.config.ts  tsconfig.json
examples/aws-astro-redis/: package.json  sst.config.ts
examples/aws-aurora-local/: index.ts  package.json  sst-env.d.ts  sst.config.ts
examples/aws-aurora-mysql/: index.ts  package.json  sst.config.ts
examples/aws-aurora-postgres/: index.ts  package.json  sst.config.ts
examples/aws-auth-nextjs/: package.json  sst.config.ts
examples/aws-auth-react/: README.md  package.json  sst-env.d.ts  sst.config.ts
examples/aws-base/: sst.config.ts
examples/aws-bucket-queue-subscriber/: sst.config.ts
examples/aws-bucket-subscriber/: sst.config.ts  subscriber.ts
examples/aws-bucket-topic-subscriber/: sst.config.ts
examples/aws-bun/: Dockerfile  bun.lockb  index.ts  package.json  sst-env.d.ts  sst.config.ts
examples/aws-bun-elysia/: sst.config.ts
examples/aws-bun-file-upload/: sst.config.ts
examples/aws-bun-redis/: README.md  package.json  sst.config.ts
examples/aws-bundle/: package.json  sst-env.d.ts  sst.config.ts
examples/aws-cluster-autoscaling/: package.json  queue.ts  sst-env.d.ts  sst.config.ts
examples/aws-cluster-internal/: index.mjs  package.json  sst-env.d.ts  sst.config.ts
examples/aws-cluster-spot/: package.json  sst-env.d.ts  sst.config.ts
examples/aws-cluster-vpclink/: package.json  sst-env.d.ts  sst.config.ts
examples/aws-deno/: deno.json  main.ts  sst.config.ts
examples/aws-deno-redis/: sst.config.ts
examples/aws-drizzle/: sst.config.ts
examples/aws-dynamo/: sst.config.ts
examples/aws-efs/: sst.config.ts
examples/aws-efs-surrealdb/: sst.config.ts
examples/aws-express/: Dockerfile  index.mjs  package.json  sst.config.ts
examples/aws-express-file-upload/: sst.config.ts
examples/aws-express-redis/: package.json  sst.config.ts
examples/aws-fastapi/: package.json  pyproject.toml  sst-env.d.ts  sst.config.ts  sst.pyi
examples/aws-fastapi/functions/: pyproject.toml
examples/aws-fastapi/functions/src/functions/: api.py
examples/aws-go-api-gateway-v2/: package.json  sst.config.ts
examples/aws-go-lambda-bucket-presigned-url/: package.json  (+1 more)
examples/aws-python/: README.md  pyproject.toml  sst-env.d.ts  sst.config.ts  sst.pyi
examples/aws-python-container/core/: pyproject.toml
examples/aws-python-container/core/src/core/: ping.py
examples/aws-python-container/custom_dockerfile/: Dockerfile  pyproject.toml
examples/aws-python-container/functions/: pyproject.toml  sst.pyi
examples/aws-python-huggingface/: README.md  pyproject.toml  sst.config.ts
examples/aws-python-huggingface/functions/: Dockerfile  pyproject.toml  sst.pyi
examples/aws-python/core/: pyproject.toml  sst.pyi
examples/aws-python/core/src/core/: __init__.py
examples/aws-python/functions/: pyproject.toml
examples/aws-python/functions/src/functions/: api.py
platform/: package.json  platform.go
scripts/: release  snapshot
www/: astro.config.mjs  config.ts  generate.ts  package.json  sst.config.ts
(+417 files in other folders)
