[project]
name = "custom_dockerfile"
version = "0.1.0"
description = "Custom Dockerfile"
dependencies = ["core", "sst"]
requires-python = "==3.11.*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
core = { workspace = true }
sst = { git = "https://github.com/sst/sst.git", branch = "dev", subdirectory = "sdk/python" }
